@startuml bdd_theory

package "theory" {

  class ContractedGaussianTypeOrbital <<CGTO>>

  package "integrals" {
    abstract class Integral
    abstract class TwoGaussianIntegral
    class Overlap
    class KineticEnergy
    class NuclearAttraction
    class TwoElectronRepulsion
  }

  package "initialization" {
    class QuantumCalculationContext
    class "HartreeFock\n(Context)" as HFContext
    class "RHF\n(Context)" as RHFContext
    class "UHF\n(Context)" as UHFContext
    class "ROHF\n(Context)" as ROHFContext
    class NuclearRepulsionEnergy
  }
}

' ═══ Generalization ═══

TwoGaussianIntegral -up-|> Integral
Overlap -up-|> TwoGaussianIntegral
KineticEnergy -up-|> TwoGaussianIntegral
NuclearAttraction -up-|> TwoGaussianIntegral
TwoElectronRepulsion -up-|> TwoGaussianIntegral

HFContext -up-|> QuantumCalculationContext
RHFContext -up-|> HFContext
UHFContext -up-|> HFContext
ROHFContext -up-|> HFContext

' ═══ Composition ═══

TwoGaussianIntegral *-- "1..*" ContractedGaussianTypeOrbital
HFContext *-- "0..*" ContractedGaussianTypeOrbital

@enduml
